tests/error/if_exp_invalid_cond.gw
// [contains] Invalid type
NULL ? <<<1>>> : <<<2>>>;
